<resources>

    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="similar_vacancies">Похожие вакансии</string>
    <string name="vacancy">Вакансия</string>
    <string name="moscow">Москва</string>
    <string name="food">Еда</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="_100_000">от 100 000 ₽</string>
    <string name="android_developer">Android-разработчик</string>
    <string name="working_condition">Полная занятость, Удаленная работа</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="from_1_to_3">От 1 года до 3 лет</string>
    <string name="description">Description</string>
    <string name="search_input">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_vacancy">Не удалось получить \nсписок вакансий</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="search_placeholder">Найдено 1000 вакансий</string>
    <string name="item_company_placeholder">Авто.ру</string>
    <string name="item_salary_placeholder">от 40 000 до 80 000 ₽</string>
    <string name="item_vacancy_name_placeholder">Разработчик на С++ в команду внутренних сервисов, Москва</string>


    // Team
    <string name="team">Команда</string>
    <string name="done_by">Над приложением работали</string>
    <string name="team_Semenov">Александр Семенов - лид</string>
    <string name="team_Zaharin">Виталий Захарин</string>
    <string name="team_Bugrov">Олег Бугров</string>
    <string name="team_Margina">Алексей Маржина</string>
    <string name="team_Harhanov">Александр Харханов</string>
    // Favourite
    <string name="fav_header">Избранное</string>
    <string name="fav_empty">Список пуст</string>
    // Filters
    <string name="filters_header">Настройки фильтрации</string>
    <string name="select">Выбрать</string>
    // Select Country
    <string name="country_header">Выбор страны</string>
    <string name="country">Страна</string>
    <string name="no_such_country">Такой страны нет</string>
    // Select Industry
    <string name="industry_header">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="no_such_industry">Такой отрасли нет</string>
    // Select Region
    <string name="region_header">Выбор региона</string>
    <string name="region">Регион</string>
    <string name="enter_region">Введите регион</string>
    <string name="no_such_region">Такого региона нет</string>
    // Select Workplace
    <string name="workplace_header">Выбор места работы</string>
    // Bottom Navigation
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    // Search
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="status_no_results">Таких вакансий нет</string>
    <string name="status_results">Найдено [found] вакансий</string>
    <string name="job_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_name">Контактное лицо</string>
    <string name="email">E-mail</string>
    <string name="telephone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="hint_workplace">Место работы</string>
    <string name="hint_industry">Отрасль</string>
    <string name="hint_exp_salary">Ожидаемая зарплата</string>
    <string name="hint_enter_salary">Введите сумму</string>
    <string name="filter_no_show_salary">Не показывать без зарплаты</string>
    <string name="filter_settings_apply">Применить</string>
    <string name="filter_settings_reset">Сбросить</string>
    <string name="net_error">Ошибка сети</string>
    <string name="placeholder_no_region">Такого региона нет</string>
    <string name="placeholder_no_region_list">Не удалось получить\nсписок</string>
    <string name="placeholder_server_error">Ошибка сервера</string>
</resources>
