<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.practicum.android.diploma.presentation.filters.SelectIndustryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/select_industry_back_arrow_imageview"
        style="@style/HeaderBackArrowStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/choose_industry_header_textview"
        style="@style/SelectHeaderStyle"
        android:text="@string/industry_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_19"
        app:layout_constraintStart_toEndOf="@+id/select_industry_back_arrow_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <EditText
            android:id="@+id/et_Search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:autofillHints="no"
            android:background="@drawable/search_background"
            android:backgroundTint="@color/yp_lightGray"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/enter_industry"
            android:inputType="text"
            android:maxLength="99"
            android:maxLines="1"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_4"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/yp_gray"
            android:textSize="@dimen/sp_16" />

    </FrameLayout>

    <ImageView
        android:id="@+id/ivClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_28dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginRight="@dimen/dp_16"
        android:src="@drawable/close_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintBottom_toBottomOf="@id/container"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_filter_industry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_8"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/filterSettingsApply"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_industry" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_0"
        android:contentDescription="@string/server_error"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="223dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/il_angry_cat" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_error"
        tools:text="@string/no_such_industry" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <TextView
        android:id="@+id/filterSettingsApply"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60"
        android:layout_marginBottom="@dimen/size_24"
        android:background="@drawable/select_btn_background"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/select"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border" />

</androidx.constraintlayout.widget.ConstraintLayout>
