<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.practicum.android.diploma.presentation.filters.SelectWorkplaceFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16" />

    <ImageView
        android:id="@+id/select_workplace_back"
        style="@style/HeaderBackArrowStyle"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/region_industry_header_textview"
        style="@style/SelectHeaderStyle"
        android:text="@string/workplace_header"
        app:layout_constraintStart_toEndOf="@+id/select_workplace_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_36"
        android:clickable="true"
        android:focusable="true"
        android:descendantFocusability="blocksDescendants"
        android:enabled="true"
        android:textColorHint="@color/yp_gray"
        android:visibility="visible"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toStartOf="@+id/select_country_button"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/region_industry_header_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/country"
            android:textAlignment="viewStart"
            android:textSize="@dimen/sp_16"
            app:boxBackgroundColor="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/select_country_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:contentDescription="@string/description"
        android:src="@drawable/arrow_forward"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintTop_toTopOf="@+id/country" />

    <ImageView
        android:id="@+id/clear_country_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintTop_toTopOf="@+id/country" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:descendantFocusability="blocksDescendants"
        android:enabled="true"
        android:textColorHint="@color/yp_gray"
        android:visibility="visible"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toStartOf="@+id/select_region_button"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/region_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/region"
            android:textAlignment="viewStart"
            android:textSize="@dimen/sp_16"
            app:boxBackgroundColor="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/select_region_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:contentDescription="@string/description"
        android:src="@drawable/arrow_forward"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/region"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintTop_toTopOf="@+id/region" />

    <ImageView
        android:id="@+id/clear_region"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/region"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintTop_toTopOf="@+id/region" />

    <TextView
        android:id="@id/filterSettingsApply"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60"
        android:layout_marginBottom="@dimen/size_24"
        android:background="@drawable/select_btn_background"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/select"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border" />

</androidx.constraintlayout.widget.ConstraintLayout>
